qtwebkit (2.1.0~2011week09-3) UNRELEASED; urgency=low


 -- Modestas Vainius <modax@debian.org>  Mon, 28 Mar 2011 03:11:16 +0300

qtwebkit (2.1.0~2011week09-2) unstable; urgency=high

  [ Pino Toscano ]
  * Build-depend on libphonon-dev on non-Linux architectures. (Closes: #617656)

  [ Modestas Vainius ]
  * Build with -gstabs on armel (Closes: #618325). Added to the
    stabs_format_debug_info.diff patch (former
    07_s390_stabs_format_debugging_information.diff).
  * Urgency=high, transition stuff.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 24 Mar 2011 16:12:43 +0200

qtwebkit (2.1.0~2011week09-1) unstable; urgency=low

  * New upstream release - upload to Sid.
  * Add webcore_qtplatformplugin_createfullscreenvideohandler_ftbfs.patch to
    work around the build failure.
  * Switch to Qt MultimediaKit for the video support (instead of Phonon), build
    depends on QtMultimediaKit.
  * Enable geolocation support: build depends on QtLocation and define
    ENABLE_GEOLOCATION.

 -- Fathi Boudra <fabo@debian.org>  Sun, 06 Mar 2011 10:05:46 +0200

qtwebkit (2.1.0~2011week03-1) experimental; urgency=low

  * New upstream release: switch to Qt WebKit 2.1 branch.

  [ Fathi Boudra ]
  * Update debian/control:
    - build depends on Qt 4.7.0 beta 2.
  * Update debian/rules:
    - pass DEFINES+=ENABLE_VIDEO to build with audio/video support.
  * Update libqtwebkit-dev.install file: add qwebkitplatformplugin.h.

  [ Modestas Vainius ]
  * Fix debian/control Vcs fields to point to the new location.

  [ Pino Toscano ]
  * Add patch 09_hurd.diff to fix compilation on Hurd.

 -- Fathi Boudra <fabo@debian.org>  Sat, 29 Jan 2011 18:23:41 +0200

qtwebkit (2.0~week26-2) experimental; urgency=low

  * Fix FTBFS on GNU/kFreeBSD caused by missing strnstr() on glibc systems.

 -- Fathi Boudra <fabo@debian.org>  Wed, 07 Jul 2010 09:51:03 +0300

qtwebkit (2.0~week26-1) experimental; urgency=low

  * Initial release (Closes: #576006)
