@@ -1,5 +1,8 @@
 qtwebkit (2.1.0~2011week09-3) UNRELEASED; urgency=low
 
+  * Rename 08_powerpc_s390_no_gc_sections.diff to no_gc_sections.diff and
+    extend it to cover armel and mip* as well. Full list: powerpc, s390, arm*,
+    mips*.
 
  -- Modestas Vainius <modax@debian.org>  Mon, 28 Mar 2011 03:11:16 +0300
 
